product_docs/docs/pem/10/pem_rest_api/v1/index.mdx
---
navTitle: v1
pdfExclude: true
title: EDB Postgres Enterprise Manager REST APIs v1.0
navigation:
  - object
  - alerts
  - copy-alert
  - alert-template
  - custom-probe
  - probe-configuration
  - copy-probe
  - probe-data
  - probe-history
  - schemas
indexCards: simple

---

<span id="edb-postgres-enterprise-manager-rest-apis"></span>



**NOTE:**

-   **EDB Postgres Enterprise Manager** *is referred as* **PEM** *in this documentation.*
-   **PEM** *uses self-certified SSL certificates, hence - you may get error like 'SSL certificate problem: self signed certificate'. You may need to use the 'insecure' connection to connect to the server.*

**PEM** exposes end-points  (REST APIs) for the following operations:

-   *Retrieval of the objects retrieved from the monitored server, and agents.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for probes.*
-   *Retrieval of the statistics/metrics data (including the historical data) collected by different probes.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for alerts.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for email group used by the alerts mechanism.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for alert templates used by the alerts.*
-   ***R**etreival, and **U**pdate of the probe configuration.*
-   *Copy the agents/servers/database/schema level **probe configurations** to other same level, or lower level objects.*
-   *Copy the alert configuration of one object to other objects.*
-   ***R**etreival, and **U**pdate the PEM-server configurations.*

Base URLs:

-   <a href="https://PEM-SERVER-IP/pem/api/v1">https://PEM-SERVER-IP/pem/api/v1</a>

Email: <a href="mailto:support@enterprisedb.com">EnterpriseDB</a> Web: <a href="https://www.enterprisedb.com">EnterpriseDB</a> 
License: <a href="https://www.enterprisedb.com/ba/limited-license-v2-9">Limited Use Software License Agreement</a>

<span id="edb-postgres-enterprise-manager-rest-apis-object"></span>
