product_docs/docs/pem/10/pem_rest_api/v17/index.mdx
---
navTitle: v17
title: EDB Postgres Enterprise Manager REST APIs v17.0
navigation:
  - object
  - profiles
  - blackout
  - monitored-object-status
  - agent-job
  - alerts-history
  - alerts-status
  - alerts
  - copy-alert
  - alert-template
  - export-custom-alert-templates
  - import-custom-alert-templates
  - export-custom-charts
  - import-custom-charts
  - export-custom-dashboards
  - import-custom-dashboards
  - custom-probe
  - export-custom-probes
  - import-custom-probes
  - probe-configuration
  - copy-probe
  - probe-data
  - probe-history
  - webhook
  - email-groups
  - include-exclude-database-monitoring
  - schemas
indexCards: simple

---

<span id="edb-postgres-enterprise-manager-rest-apis"></span>



**NOTE:**

-   **EDB Postgres Enterprise Manager** *is referred to as* **PEM** *in this documentation.*
-   Because **PEM** *uses self-certified SSL certificates, you may encounter an error such as 'SSL certificate problem: self signed certificate'. You may need to use the 'insecure' connection to connect to the server.*

**PEM** exposes end-points (REST APIs) for the following operations:

-   *Retrieval of the objects retrieved from the monitored server and agents.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for probes.*
-   *Retrieval of the statistics/metrics data (including the historical data) collected by different probes.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for alerts.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for the email group used by the alerts mechanism.*
-   ***C**reate, **R**etrieve, **U**pdate, and **D**elete (CRUD) operations for alert templates used by the alerts.*
-   ***R**etrieve and **U**pdate of  probe configuration.*
-   *Copy the agent/server/database/schema level **probe configurations** to other objects at the same level or lower level objects.*
-   *Copy the alert configuration of one object to other objects.*
-   ***R**etrieve and **U**pdate the PEM-server configurations.*

**v17 enhancements:**

-   *Adds the `/blackout/` endpoint for managing alert blackouts as first-class objects (CRUD).*
-   *Adds name-based filtering support for object listing endpoints via `name` and `name_contains` query parameters.*

Base URLs:

-   <a href="https://PEM-SERVER-IP/pem/api/v17">https://PEM-SERVER-IP/pem/api/v17</a>

Email: <a href="mailto:support@enterprisedb.com">EnterpriseDB</a> Web: <a href="https://www.enterprisedb.com">EnterpriseDB</a> 
License: <a href="https://www.enterprisedb.com/ba/limited-license-v2-9">Limited Use Software License Agreement</a>

<span id="edb-postgres-enterprise-manager-rest-apis-object"></span>
